--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -193,3 +194,4 @@ Temporary Items
 .apdisk
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,go,node
+.vscode
