--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bufbuild/connect-node": "^0.7.0",
     "@bufbuild/connect-query": "^0.1.0",
     "@bufbuild/connect-web": "^0.6.0",
+    "@bufbuild/protobuf": "^1.0.0",
     "@next/font": "13.1.6",
     "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.14.1",
