--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bufbuild/connect-node": "^0.7.0",
+    "@bufbuild/connect": "^0.8.4",
+    "@bufbuild/connect-next": "^0.8.4",
+    "@bufbuild/connect-node": "^0.8.4",
     "@bufbuild/connect-query": "^0.1.0",
     "@bufbuild/connect-web": "^0.6.0",
     "@bufbuild/protobuf": "^1.0.0",
